fix modals being unreadable

--- a/main.css
+++ b/main.css
@@ -76,6 +76,7 @@ hr {
 .credit-modal-content {
   position: relative;
   background-color: #fefefe;
+  color: #000;
   margin: auto;
   padding: 0;
   border: 1px solid #888;
@@ -133,6 +134,7 @@ hr {
 .wiki-db-modal-content {
   position: relative;
   background-color: #fefefe;
+  color: #000;
   margin: auto;
   padding: 0;
   border: 1px solid #888;
